--- a/movieapp/package.json
+++ b/movieapp/package.json
@@ -9,12 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font":"13.1.6",
     "react": "^18",
     "react-dom": "^18",
     "next": "14.0.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8"    
   }
 }
